--- a/app/views/home/_navbar.html.erb
+++ b/app/views/home/_navbar.html.erb
@@ -1,18 +1,20 @@
 <nav class="navbar navbar-default">
   <div class="container">
-    <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <%= link_to "Crypto Portfolio", root_path, class: "navbar-brand" %>
-      <%= link_to "Home", root_path, class: "navbar-brand" %>
-      <%= link_to "About", home_about_path, class: "navbar-brand" %>
-      <%= link_to "Lookup", home_lookup_path, class: "navbar-brand" %>
-    </div>
+      <ul class="nav navbar-nav navbar-right">
+	      <li><%= link_to "Crypto Portfolio", root_path %></li>
+	      <li><%= link_to "Home", root_path %></li>
+	      <li><%= link_to "About", home_about_path %></li>
+	      <li><%= link_to "Lookup", home_lookup_path %></li>
 
+        <% if user_signed_in? %>
+	         <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
+	         <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
+        <% else %>
+	         <li><%= link_to "Log in", new_user_session_path %></li>
+	         <li><%= link_to "Sign Up", new_user_registration_path %></li>
+        <% end %>
+ 	    </ul>
+    </div>
   </div><!-- /.container -->
 </nav>
